package fci.swe.advanced_software.services.users.student;

public class StudentService {
}
